# advent-of-code

./: .gitignore  README.md  loader.py  main.py
2016/: .gitignore  Cargo.toml
2016/src/: main.rs  utils.rs
2016/src/day01/: instruction.rs  mod.rs  state.rs  turn.rs
2016/src/day02/: keypad.rs  mod.rs
2016/src/day04/: mod.rs  room.rs
2016/src/day05/: mod.rs
2016/src/day06/: mod.rs
2016/src/day07/: mod.rs
2016/src/day08/: mod.rs  screen.rs
2016/src/day09/: compressed_file.rs  mod.rs
2016/src/day1/: instruction.rs  mod.rs  state.rs
2016/src/day10/: instruction.rs  mod.rs  simulation.rs
2016/src/day11/: building.rs  items.rs  mod.rs
2016/src/day12/: mod.rs
2016/src/day12/assembunny/: computer.rs  instruction.rs
2016/src/day13/: maze.rs  mod.rs
2016/src/day14/: hasher.rs  key_finder.rs  mod.rs
2016/src/day15/: mod.rs  sculpture.rs
2016/src/day16/: data_generator.rs  mod.rs
2016/src/day17/: direction.rs  grid.rs  mod.rs
2016/src/day18/: mod.rs  room.rs
2016/src/day19/: circle.rs  mod.rs
2016/src/day2/: direction.rs  keypad.rs  mod.rs
2016/src/day20/: firewall.rs  mod.rs
2016/src/day21/: command.rs  mod.rs  program.rs
2016/src/day22/: cluster.rs  mod.rs  node.rs
2016/src/day23/: mod.rs
2016/src/day24/: Grid.rs  cell.rs  mod.rs
2016/src/day25/: mod.rs
2016/src/day3/: mod.rs
2016/src/day4/: mod.rs  room.rs
2016/src/day6/: mod.rs
2016/src/day7/: ipv7.rs  mod.rs
2016/src/day8/: mod.rs
2016/src/day9/: mod.rs
2016/src/utils/: bit_vec.rs  mod.rs
2016/src/utils/assembunny/: computer.rs  instruction.rs  mod.rs
(+684 files in other folders)
