[package]
name = "advent-of-code-2016"
version = "0.1.0"
authors = ["Jonathon Henderson <jrhenderson1988@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
md5 = "0.7"
pathfinding = "2.0.4"
itertools = "0.9"
